--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
                         <li>
                             <a class="list-item"
                                 href="https://starik-den.github.io/frontend_projects/creative_digital_rev02">Creative digital project</a>
-                            <span class="i1"> [ HTML5, CSS3 ] </span>
+                            <span class="i1"> [HTML5, CSS3, JavaScript] </span>
                         </li>
                         <li>
                             <a class="list-item"
-                                href="https://cryptohub.p.goit.global/">https://cryptohub.p.goit.global/</a>
-                            <span class="i2">[ JavaScript ]</span>
+                                href="https://starik-den.github.io/portfolio/natalyShum/">Nataly Shum site</a>
+                            <span class="i2">[HTML5, CSS3, JavaScript]</span>
                         </li>
                         <li>
                             <a class="list-item"
