Protfolio page: add links of projects

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
                             <span class="i2">[HTML5, CSS3, JavaScript]</span>
                         </li>
                         <li class="my-projects-list__item">
+                            <a class="list-item" href="https://starik-den.github.io/portfolio/startupPage/" target="_blank">Startup page</a>
+                            <span class="dashed"></span>
+                            <span class="i2">[HTML5, CSS3, JavaScript, jQuery]</span>
+                        </li>
+                        <li class="my-projects-list__item">
                             <a class="list-item" href="https://starik-den.github.io/portfolio/Convert/" target="_blank">Convert page</a>
                             <span class="dashed"></span>
                             <span class="i3">[HTML5, CSS3, Adaptive]</span>
